# kaggle_challenges

./: .gitignore  pyproject.toml
obesity_risk/: obesity_risk.ipynb  obesity_risk_0.89.ipynb
titanic_ml/: submission.csv  titanic_sklearning.ipynb
