[tool.poetry]
name = "kaggle_challenges"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
kaggle = "^1.6.4"
httplib2 = "^0.22.0"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
seaborn = "^0.13.2"
missingno = "^0.5.2"
matplotlib = "^3.8.2"
altair = "^5.2.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
